Checkstlye / Findbug fixes